commit 3053d3a2f6771b3c4f270d54a19750bca23d6c75
Author: Ashton <nelson.ashton98@gmail.com>
Date:   Thu Sep 27 01:38:14 2018 -0500

    Updated changelog

commit 2c577851e7e2e6aaed8215a7eb7834700c62ec99
Author: Ashton <nelson.ashton98@gmail.com>
Date:   Thu Sep 27 01:37:49 2018 -0500

    Added rudimentary path finding for non-tunnelers

commit e631ec6619e56445b75d4b020af44c1f926ff6f6
Author: Ashton <nelson.ashton98@gmail.com>
Date:   Tue Sep 25 20:52:47 2018 -0500

    Separated dungeon actions into separate files

commit b2fff59d068d6d035bd9abc26107932e7259f009
Author: Ashton <nelson.ashton98@gmail.com>
Date:   Wed Sep 12 23:25:32 2018 -0500

    Updated CHANGELOG

commit a6defeba1415fed05ec86febac7d828213f86570
Author: Ashton <nelson.ashton98@gmail.com>
Date:   Wed Sep 12 23:24:52 2018 -0500

    Added save functionality

commit c41700831519afab084d9566dc571095ef2714b4
Author: Ashton <nelson.ashton98@gmail.com>
Date:   Wed Sep 12 21:57:09 2018 -0500

    Updated README and CHANGELOG

commit ae3e6ceb23b1d581d400da375277315c98f45a33
Author: Ashton <nelson.ashton98@gmail.com>
Date:   Wed Sep 12 21:54:11 2018 -0500

    Added load from dungeon file functionality (~/.rlg327/dungeon/)

commit 82bfa0b9761213a639c96d99ed369fb2ac37d93f
Author: Ashton <nelson.ashton98@gmail.com>
Date:   Tue Sep 11 23:02:51 2018 -0500

    Refactored to include structs for dungeons and rooms

commit 64b998e0836657b2631cbda4cac58eff861a230f
Author: Ashton Nelson <20118782+ASTRELION@users.noreply.github.com>
Date:   Tue Sep 11 16:09:55 2018 -0500

    Add files via upload

commit 7321ce127639f6098ce24ea6b062a87c56317db9
Author: Ashton Nelson <20118782+ASTRELION@users.noreply.github.com>
Date:   Tue Sep 11 00:47:57 2018 -0500

    Add files via upload

commit 8b95b640661476bbed13b3784fa6ab0445b5b27a
Author: Ashton Nelson <20118782+ASTRELION@users.noreply.github.com>
Date:   Tue Sep 11 00:34:13 2018 -0500

    Add files via upload

commit 62af9214ef85bafe9ea1bd8e5c5f08eff64a930f