@@ -15,33 +15,37 @@ struct dungeon dungeon = {};
 
 int main(int argc, char *argv[])
 {
-  printf(C_PURPLE "~\t\t" C_CYAN "    *~*~*~*~*~{ Alban The Sorcerer }~*~*~*~*~*\n" C_RESET);
-
   bool save = false;
   bool load = false;
 
   // Parse arguments
   if (argc > 1)
   {
-    if (strcmp(argv[1], "--save") == 0)
+    int i = 0;
+    for (i = 1; i < argc; i++)
     {
-      save = true;
-    }
-    else if (strcmp(argv[1], "--load") == 0)
-    {
-      load = true;
-    }
-
-    if (argc > 2 && strcmp(argv[2], "--save") == 0)
-    {
-      save = true;
-    }
-    else if (argc > 2 && strcmp(argv[2], "--load") == 0)
-    {
-      load = true;
+      if (strcmp(argv[i], "--save") == 0)
+      {
+	save = true;
+      }
+      else if (strcmp(argv[i], "--load") == 0)
+      {
+	load = true;
+      }
+      else if (strcmp(argv[i], "--nummon") == 0 && 
+	       (dungeon.numMonsters = atoi(argv[i + 1])))
+      {
+	//
+      }
     } 
   }
 
+  if (!dungeon.numMonsters)
+  {
+    dungeon.numMonsters = 10;
+  }
+
+  // Set dungeon values to default
   dungeon = (struct dungeon){};
   initializeDungeon();
 
@@ -56,38 +60,20 @@ int main(int argc, char *argv[])
     generatePaths();
   }
 
-  if (save)
-  {
-    saveDungeon();
-  }
+  // Generate distance maps (tunnel & non-tunnel)
+  genMapNoTunnel(&dungeon);
+  genMapTunnel(&dungeon);
 
-  //displayDungeon();
-
-  int i, j;
-  for (i = 1; i < DNGN_SIZE_Y - 1; i++)
-  {
-    for (j = 1; j < DNGN_SIZE_X - 1; j++)
-    {
-      pair_t p1, p2;
-      p1[1] = dungeon.pcY;
-      p1[0] = dungeon.pcX;
-      p2[1] = i;
-      p2[0] = j;
-
-      if (dungeon.hardness[i][j] == 0)
-      {
-	generateDistanceMap(&dungeon, p2, p1, dungeon.terrainDIST_NT);
-      }
-
-      generateDistanceMap(&dungeon, p2, p1, dungeon.terrainDIST_T);
-    }
-  }
-
-  
+  printf(C_PURPLE "~\t\t" C_CYAN "    *~*~*~*~*~{ Alban The Sorcerer }~*~*~*~*~*\n" C_RESET);
 
   displayDungeon();
 
   printf(C_PURPLE "~\n~\n" C_RESET);
+
+  if (save)
+  {
+    saveDungeon();
+  }
 
   return 0;
 }
